# rce-mcp

./: API_KEYS.md  CONTRIBUTING.md  INSTALLATION_AUDIT.md  LICENSE  README.md  STACKEXCHANGE_SETUP.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
src/rce_mcp/: __init__.py  config.py  hhem.py  server.py  setup.py  utils.py
src/rce_mcp/sources/: __init__.py  arxiv.py  context7.py  github.py  local.py  stackexchange.py  web.py  wikidata.py  wikipedia.py
tests/: test_hhem.py  test_sources.py
